<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".patient.PatientLoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkblue"
        app:title="Patient Login"
        app:titleTextColor="@android:color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/patient" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/username_email"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_section"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="Password"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="59dp"
                    android:background="@drawable/input_section"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_section"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:layout_gravity="center_horizontal"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_a_account"
                android:textColor="@android:color/black"
                />
            <TextView
                android:id="@+id/patient_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                />
        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>